# LibibTools

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Chirp_to_Libib.py  Makefile  README.md  chirp_to_libib_2026-03-22_14-54.csv  chirp_to_libib_unresolved_2026-03-22_14-54.txt  gitignore  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: tests.yml
chirp_to_libib/: __init__.py  core.py
chirp_to_libib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
kindle_to_libib/: core.py
lib/: __init__.py  openlibrary.py
tests/: conftest.py  test_chirp.py  test_cli.py  test_dedupe_filter.py  test_isbn_utils.py  test_kindle.py  test_openlibrary.py  test_output.py  test_pipeline.py  test_scrape.py
