[project]
name = "chirp_to_libib"
version = "0.1.0"
description = "Scrape Chirp audiobook library and export Libib-compatible CSV"
authors = [{ name = "Jennifer M" }]
requires-python = ">=3.10"

[tool.setuptools]
packages = ["chirp_to_libib", "kindle_to_libib"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["chirp_to_libib"]
omit = [
    "chirp_to_libib/__main__.py",
    "chirp_to_libib/core.py:_build_driver",
    "chirp_to_libib/core.py:_login",
    "chirp_to_libib/core.py:scrape_chirp",
    "chirp_to_libib/core.py:main",
]

[tool.ruff.lint]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
